fix: remove scrollbar if not needed

--- a/easy-to-use-api/klips-url-generator/src/style.css
+++ b/easy-to-use-api/klips-url-generator/src/style.css
@@ -13,7 +13,7 @@ body,
 .output-wrapper {
   width: 25%;
   margin: 1%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .logo {
